Bug 415610 - Export Audio Multistems doesn't work anymore
Summary: Export Audio Multistems doesn't work anymore
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Rendering & Export (other bugs)
Version First Reported In: 19.12.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
: 408046 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-12-27 15:02 UTC by Christophe Agathon
Modified: 2022-03-16 10:50 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Agathon 2019-12-27 15:02:11 UTC
SUMMARY

Exporting a projet with multiple audio tracks to separated files was possible in Kdenlive  18.someting.
There is still an option "Export audio multistem" ("Export audio multipise" en français) but it is just ignored and the rendered audio track is a mix of the project tracks.

STEPS TO REPRODUCE
1. Make a project with one video and two audio tracks named audio1 and audio2
2. Render ac3 audio with "Export audio(automatic)" and "Export audio multistem" options on

OBSERVED RESULT

Only one file project.ac3 is generated as in not multistem audio export.


EXPECTED RESULT

project_audio1.ac3 and project_audio2.ac3

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2

ADDITIONAL INFORMATION
Comment 1 Christophe Agathon 2019-12-28 09:38:00 UTC
Just in case you were wondering, the latest appimage works the same.
Comment 2 emohr 2019-12-29 17:13:38 UTC
Stem-Audio-Export doesn’t work in 19.04ff anymore. See issue: https://invent.kde.org/kde/kdenlive/issues/211 

BTW: you can run an old versions of Kdenlive using the AppImage. Choose one from the Download page: https://files.kde.org/kdenlive/release/
Comment 3 Julius Künzel 2021-03-03 10:21:22 UTC
*** Bug 408046 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-03-01 21:48:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kdenlive/-/merge_requests/280
Comment 5 Julius Künzel 2022-03-16 10:35:36 UTC
Git commit 3480b5afe9f53ef580145e7f43e92ff88bde1311 by Julius Künzel.
Committed on 16/03/2022 at 10:35.
Pushed by jlskuz into branch 'release/22.04'.

[Render Widget] Refactoring and feature extension

The most important changes:
* Rename "Profiles" to "Render Presets"
* Separate presets view and model code better
* Extend preset editor to have all important options in the UI instead of needing to write the properties by hand
* Add a batch render mode using guides as separator
* Re-implement "Stem audio" export under new name "Separate file for each track"
* Other UI improvements and face lifting

Fixes #211
Related to #444
FIXED-IN: 22.04.0

M  +1    -0    src/CMakeLists.txt
M  +4    -2    src/bin/model/markerlistmodel.cpp
M  +2    -2    src/bin/model/markerlistmodel.hpp
M  +1    -1    src/definitions.h
M  +1    -0    src/dialogs/CMakeLists.txt
A  +652  -0    src/dialogs/renderpresetdialog.cpp  *
A  +32   -0    src/dialogs/renderpresetdialog.h  *
M  +807  -1941 src/dialogs/renderwidget.cpp
M  +56   -52   src/dialogs/renderwidget.h
M  +5    -5    src/kdenlivesettings.kcfg
M  +1    -1    src/mainwindow.cpp
M  +9    -2    src/profiles/tree/profiletreemodel.cpp
A  +7    -0    src/renderpresets/CMakeLists.txt
A  +494  -0    src/renderpresets/renderpresetmodel.cpp     [License: GPL(3+eV) GPL(v3.0)]
A  +107  -0    src/renderpresets/renderpresetmodel.hpp     [License: GPL(3+eV) GPL(v3.0)]
A  +430  -0    src/renderpresets/renderpresetrepository.cpp     [License: GPL(3+eV) GPL(v3.0)]
A  +85   -0    src/renderpresets/renderpresetrepository.hpp     [License: GPL(3+eV) GPL(v3.0)]
A  +156  -0    src/renderpresets/tree/renderpresettreemodel.cpp     [License: GPL(3+eV) GPL(v3.0)]
A  +36   -0    src/renderpresets/tree/renderpresettreemodel.hpp     [License: GPL(3+eV) GPL(v3.0)]
A  +780  -0    src/ui/editrenderpreset_ui.ui
M  +503  -476  src/ui/renderwidget_ui.ui
D  +0    -229  src/ui/saveprofile_ui.ui

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://invent.kde.org/multimedia/kdenlive/commit/3480b5afe9f53ef580145e7f43e92ff88bde1311