[Render Widget] Refactoring and feature extension

The most important changes:
* Rename "Profiles" to "Render Presets"
* Separate presets view and model code better
* Extend preset editor to have all important options in the UI instead of needing to write the properties by hand
* Add a batch render mode using guides as separator
* Re-implement "Stem audio" export under new name "Separate file for each track"
* Other UI improvements and face lifting

Fixes #211
Related to #444

BUG: 415610
FIXED-IN: 22.04.0